# JPL-hs

./: .gitignore  ChangeLog.md  LICENSE  README.md  flake.nix  jpl-hs.cabal  package.yaml
app/: Main.hs
doc/: ConcreteSyntax.md  ConcreteSyntax_impl.md  ConcreteSyntax_todo.md  Roadmap.md
src/: JPL.hs
src/JPL/Core/: Builtins.hs  Definitions.hs  Functions.hs  Generators.hs  Parser.hs
test/: Spec.hs
