cabal-version: 1.2

name:           jpl-hs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/luochen1990/jpl-hs#readme>
homepage:       https://github.com/luochen1990/jpl-hs#readme
bug-reports:    https://github.com/luochen1990/jpl-hs/issues
author:         LuoChen
maintainer:     luochen1990@gmail.com
copyright:      2020 LuoChen
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/luochen1990/jpl-hs

library
  exposed-modules:
      JPL
      JPL.Core.Builtins
      JPL.Core.Definitions
      JPL.Core.Functions
      JPL.Core.Generators
      JPL.Core.Parser
  other-modules:
      Paths_jpl_hs
  hs-source-dirs:
      src
  build-depends:
      QuickCheck
    , array
    , base >=4.7 && <5
    , bytes
    , bytestring
    , cereal
    , containers
    , hspec
    , megaparsec
    , mtl
    , parser-combinators
    , pretty-simple
    , raw-strings-qq
    , recursion-schemes
    , scientific
    , text
    , transformers
  default-language: Haskell2010

executable jpl-hs-exe
  main-is: Main.hs
  other-modules:
      Paths_jpl_hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , array
    , base >=4.7 && <5
    , bytes
    , bytestring
    , cereal
    , containers
    , hspec
    , jpl-hs
    , megaparsec
    , mtl
    , parser-combinators
    , pretty-simple
    , raw-strings-qq
    , recursion-schemes
    , scientific
    , text
    , transformers
  default-language: Haskell2010

test-suite jpl-hs-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_jpl_hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , array
    , base >=4.7 && <5
    , bytes
    , bytestring
    , cereal
    , containers
    , hspec
    , jpl-hs
    , megaparsec
    , mtl
    , parser-combinators
    , pretty-simple
    , raw-strings-qq
    , recursion-schemes
    , scientific
    , text
    , transformers
  default-language: Haskell2010
