cabal-version: 3.0

name:           jpl-hs
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/luochen1990/jpl-hs#readme>
homepage:       https://github.com/luochen1990/jpl-hs#readme
bug-reports:    https://github.com/luochen1990/jpl-hs/issues
author:         LuoChen
maintainer:     luochen1990@gmail.com
copyright:      2020 LuoChen
license:        Apache-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/luochen1990/jpl-hs

common common-options
  build-depends:
      QuickCheck
    , array
    , base >=4.7 && <5
    , bytes
    , bytestring
    , cereal
    , containers
    , hspec
    , megaparsec
    , mtl
    , parser-combinators
    , pretty-simple
    , raw-strings-qq
    , recursion-schemes
    , scientific
    , text
    , transformers
  default-language: Haskell2010
  default-extensions:
    ScopedTypeVariables
    TupleSections
    LambdaCase
    BlockArguments
    MonadComprehensions
    DuplicateRecordFields
    NoFieldSelectors
    OverloadedRecordDot
    OverloadedStrings
    NoImplicitPrelude
    RankNTypes
    PolyKinds
    TypeFamilies
    StandaloneDeriving
    DeriveTraversable
    FlexibleInstances
    UndecidableInstances
    TypeSynonymInstances
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  other-modules:
      Paths_jpl_hs

library
  import: common-options
  exposed-modules:
      JPL
      JPL.Core.Builtins
      JPL.Core.Definitions
      JPL.Core.Functions
      JPL.Core.Generators
      JPL.Core.Parser
  hs-source-dirs:
      src

executable jpl-hs-exe
  import: common-options
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      jpl-hs

test-suite jpl-hs-test
  import: common-options
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
      jpl-hs
